--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <input id="bill" type="text" class="input" placeholder="0" onkeyup="values(this)">
           <p class="label-input mt-5">Select Tip %</p>
           <div class="button-container">
-            <button id="5" type="button" name="button" class="button " href="#" onclick="tipCal(this)">5%</button>
+            <button id="5" type="button" name="button" class="button " onclick="tipCal(this)">5%</button>
             <button id="10" type="button" name="button" class="button " onclick="tipCal(this)">10%</button>
             <button id="15" type="button" name="button" class="button " onclick="tipCal(this)">15%</button>
             <button id="25" type="button" name="button" class="button " onclick="tipCal(this)">25%</button>
@@ -80,7 +80,7 @@
   </div>
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-  <script src="./javascript/script.js" charset="utf-8"></script>
+  <script src="./javascript/script.js" ></script>
 </body>
 
 </html>
